Fix incompatible setting for HR ble

--- a/demo-cardio-ble.html
+++ b/demo-cardio-ble.html
@@ -96,7 +96,7 @@
         filters:[{
             services: ['heart_rate'],
         }],
-          acceptAllDevices: true,
+          //acceptAllDevices: true,
           optionalServices: ['heart_rate']});
 
         log('> Name:             ' + bluetoothDevice.name);
