--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <ul>
       <li><a href="demo-diag-info.html">Get some data about the product</a></li>
       <li><a href="demo-cardio-ble.html">Connect to a BLE Heart rate sensor</a></li>
-      <li><a href="demo-ftms-ble.html">Connect to a treadmill with FTMS</a></li>
+      <li><a href="demo-ftms-ble-treadmill.html">Connect to a treadmill with FTMS</a></li>
+      <li><a href="demo-ftms-ble-bike.html">Connect to a bike with FTMS</a></li>
+      
     </ul>
 
 
