--- a/demo-ftms-ble-bike.html
+++ b/demo-ftms-ble-bike.html
@@ -165,6 +165,8 @@
         0111 0100 (5 resistance Level, 6 Instantaneous Power, 7 Average Power, 9 heart rate)
         */
 
+
+
         if ((flags & (1 << 1)) != 0) {/*log('> Average Speed');*/posAvgSpeed=nextPosition; nextPosition+=2;}
         if ((flags & (1 << 2)) != 0) {/*log('> Instantaneous Cadence');*/posInstCadence=nextPosition; nextPosition+=2;}
         if ((flags & (1 << 3)) != 0) {/*log('> Average Cadence');*/posAvgCadence=nextPosition; nextPosition+=2;}
@@ -249,14 +251,18 @@
         document.querySelector('#valueTabSpeed').textContent = speed;
 
         //distance
-        distance = value.getUint16(posTotDistance, /*littleEndian=*/true);
-        distance_complement = value.getUint8(posTotDistance + 2, /*littleEndian=*/true);
-        distance_complement = distance_complement << 16;
-        distance = distance + distance_complement;
-        console.log('> Distance ' + distance);
+        if(typeof posTotDistance !== 'undefined')
+        {
+          distance = value.getUint16(posTotDistance, /*littleEndian=*/true);
+          distance_complement = value.getUint8(posTotDistance + 2, /*littleEndian=*/true);
+          distance_complement = distance_complement << 16;
+          distance = distance + distance_complement;
+          console.log('> Distance ' + distance);
+          dataDistance.push(distance);
+      }
 
         dataSpeed.push(speed);
-        dataDistance.push(distance);
+        
 
         if (typeof posInstPower != "undefined")
         {
