Add a link to the demo star bike

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <li><a href="demo-ftms-ble-bike.html">Connect to a bike with FTMS</a></li>
       <li><a href="demo-ftms-ble-rower.html">Connect to a rower with FTMS</a></li>
       <li><a href="demo-ftms-ble-elliptical.html">Connect to an elliptical with FTMS</a></li>
+      <li><a href="star-bike.html">Connect to a bike with FTMS and see indicators with moving stars</a></li>
 
       
     </ul>
